2010-10-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-view-part-externally)
	(gnus-mime-view-part-internally): Make predicate function passed to
	gnus-mime-view-part-as-type assume argument is a mime type, not a list
	of a mime type.

	* shr.el (shr-table-widths): Don't use cl function `reduce'.

2010-10-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (require): Require cl when compiling.
	(shr-tag-hr): New function.

	* nnimap.el (nnimap-update-info): Remove double setting of high.
	(nnimap-update-info): Don't ignore groups that have no UIDNEXT.  This
	makes nnimap work properly on Courier again.

	* gnus.el (gnus-carpal): The carpal mode has been removed, but define
	the variable for backwards compatability.

	* mm-decode.el (mm-save-part): If given a non-directory result, expand
	the file name before using to avoid setting mm-default-directory to
	nil.

	* gnus-start.el (gnus-get-unread-articles): Require gnus-agent before
	bidning gnus-agent variables.

	* shr.el (shr-render-td): Use a cache for the table rendering function
	to avoid getting an exponential rendering behaviour in nested tables.
	(shr-insert): Rework the line-breaking algorithm.
	(shr-insert): Don't leave trailing spaces.
	(shr-insert-table): Also insert empty TDs.
	(shr-tag-blockquote): Ensure paragraphs after </ul>.

2010-10-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-sum.el (gnus-number): Rename from `number'.
	(gnus-article-marked-p, gnus-summary-limit-to-display-predicate)
	(gnus-summary-limit-children): Update uses correspondingly.

2010-10-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-gravatar.el (gnus-gravatar-too-ugly): New user option.
	(gnus-gravatar-transform-address): Don't show avatars of people of
	which mail addresses match gnus-gravatar-too-ugly.

2010-10-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-table-widths): Expand TD elements to fill available
	space.

2010-10-07  Julien Danjou  <julien@danjou.info>
